Fixes for charts when viewed in high contrast mode

--- a/bar-chart-horizontal-stacked-with-tooltip/chart.css
+++ b/bar-chart-horizontal-stacked-with-tooltip/chart.css
@@ -2,3 +2,7 @@
   font-weight: 600;
   font-size: 14px;
 }
+
+.tooltip-text {
+  forced-color-adjust: none;
+}
